[tool.poetry]
name = "ragrank"
version = "0.1.1"
description = "An evaluation libarary for RAG models"
authors = ["Izam Mohammed <izamdeveloper1@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Auto-Playground/RAGrank"
packages = [
    { include = "ragrank", from = "src" },
]
keywords = ["rag", "evaluation"]



[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.4"
pathlib = "^1.0.1"
urllib3 = "^2.2.1"
requests-toolbelt = "^1.0.0"
requests = "^2.28.2, !=2.30.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
