[tool.poetry]
name = "ragrank"
version = "0.0.1"
description = "An evaluation libarary for RAG models"
authors = ["Izam Mohammed <izamdeveloper1@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Auto-Playground/Ragrank"
packages = [
    { include = "ragrank", from = "src" },
]
keywords = ["rag", "evaluation"]



[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.4"
pathlib = "^1.0.1"
urllib3 = "^2.2.1"
requests-toolbelt = "^1.0.0"
requests = "^2.28.2, !=2.30.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2024.1.29"
myst-parser = "^2.0.0"
sphinx-design = "^0.5.0"
linkify-it-py = "^2.0.3"
sphinxext-opengraph = "^0.9.1"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
isort = "^5.13.2"
black = "^24.2.0"
ruff = "0.0.47"
codespell = "^2.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79

[tool.black]
line-length = 79